--- a/Romanian/main/Browser.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Browser.apk/res/values-ro/strings.xml
@@ -50,18 +50,20 @@
     <string name="actionbar_web_search">Căutare Web</string>
     <string name="adblock_force_updating_rules_toast">Se actualizează filtrul pentru reclame</string>
     <string name="adblock_notification">%d anunţuri blocate</string>
-    <string name="adblock_rules_not_updated_toast">Eșuat</string>
+    <string name="adblock_rules_not_updated_toast">"Nu s-a putut actualiza"</string>
     <string name="adblock_rules_restore">Deblocaţi</string>
-    <string name="adblock_rules_updated_toast">Finalizat</string>
+    <string name="adblock_rules_updated_toast">Actualizare efectuată</string>
     <string name="adblock_websites_settings_empyt_hint">Nu ați blocat niciun site.</string>
     <string name="adblock_websites_settings_title">Site-uri blocate</string>
     <string name="add_bookmark_group">Adăugaţi un grup</string>
-    <string name="add_bookshelf_popup_text">Ați adăugat deja această carte pe raft</string>
+    <string name="add_bookshelf_popup_text">Adăugată în raft</string>
     <string name="add_new_bookmark">Adăugaţi un marcaj</string>
     <string name="add_new_quicklink">Adăugaţi la pagina de pornire</string>
     <string name="add_ql_bm_title">Adăugaţi</string>
     <string name="add_quicklink_to_popular">Adăugaţi la pagina de pornire</string>
     <string name="add_quicklinks">Adăugaţi la pagina de pornire</string>
+    <string name="add_shortcut">Adăugați o scurtătură</string>
+    <string name="add_shortcut_success">Scurtătură adăugată cu succes</string>
     <string name="add_to_bookmark">La marcaje</string>
     <string name="add_to_desk">Plasaţi pe ecranul de pornire</string>
     <string name="add_to_desk_success">Plasaţi pe ecranul de pornire</string>
@@ -464,7 +466,7 @@ Părăsiţi această pagină?"</string>
     <string name="paused_unknown">Întreruptă</string>
     <string name="paused_waiting_for_network">Se așteaptă conectarea…</string>
     <string name="paused_waiting_to_retry">Se așteaptă reluarea…</string>
-    <string name="pay_failed_toast">Plata nu s-a efectuat</string>
+    <string name="pay_failed_toast">"Nu s-a putut finaliza plata</string>
     <string name="pay_success_toast">Plata s-a efectuat cu succes</string>
     <string name="popup_window_attempt">Permiteţi acestui site să deschidă o fereastră de tip pop-up?</string>
     <string name="positive_confirm_message">Opriți oricum</string>
@@ -630,6 +632,7 @@ Părăsiţi această pagină?"</string>
     <string name="save_password_never">Niciodată</string>
     <string name="save_password_notnow">Nu acum</string>
     <string name="save_password_remember">Memorare</string>
+    <string name="save_to">Salvați în</string>
     <string name="save_to_camera">Salvaţi la cameră</string>
     <string name="save_to_camera_failed">Nu se poate salva imaginea</string>
     <string name="save_to_camera_success">Salvat la cameră</string>
@@ -665,6 +668,8 @@ Părăsiţi această pagină?"</string>
     <string name="select_download_device">Selectaţi dispozitivul</string>
     <string name="send_comment_button">Trimite</string>
     <string name="send_comment_title">Comentariu</string>
+    <string name="senddesktop">Ecranul principal</string>
+    <string name="sendstartpage">Pagina de pornire</string>
     <string name="share_page_text">"Mă bucur de 【%1$s】 | %2$s"</string>
     <string name="show_check_security_url_check_tip_dialog_description">URL-ul acestui site va fi trimis la serverele MI pentru a verifica dacă este sigur. Puteți să dezactivați această funcţie oricând în Setări.</string>
     <string name="show_security_tip_dialog_title">Condiții de utilizare</string>
