--- a/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
@@ -302,6 +302,23 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="family_member_invitation_text">Alt membru al familiei</string>
     <string name="fileSizeSuffix">%1$s%2$s</string>
     <string name="filllight">Lumină de umplere</string>
+    <string name="filter">Filtru</string>
+    <string name="filter_a4_aesthetic">Rafinat</string>
+    <string name="filter_clarendon_fresh">Fresh</string>
+    <string name="filter_crema_elegant">Rustic</string>
+    <string name="filter_f2_classic">Clasic</string>
+    <string name="filter_food">Mâncare</string>
+    <string name="filter_hudson_blues">Înghețat</string>
+    <string name="filter_japan_style_cool">Cool</string>
+    <string name="filter_loft_twilight">Amurg</string>
+    <string name="filter_original">Niciunul</string>
+    <string name="filter_profoto_cloud">Cald</string>
+    <string name="filter_rise_lomo">Lomo</string>
+    <string name="filter_skin_aki">Decolorat</string>
+    <string name="filter_sweet">Îmbujorat</string>
+    <string name="filter_velvia_film">Film</string>
+    <string name="filter_vine">Roșu</string>
+    <string name="filter_vista_retro">Retro</string>
     <string name="finish">Finalizat</string>
     <string name="finish_create_baby_album_toast">A fost creat un album pentru \"%s\" în Mi Cloud</string>
     <string name="finish_fill_baby">Creare</string>
@@ -561,7 +578,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="scan_barcode_guide">Pentru a obţine codul QR, atingeţi pictograma Distribuire.</string>
     <string name="scan_barcode_to_join">Scanaţi un cod QR pentru a adăuga un album</string>
     <string name="scan_qr_code_buttom_text">Scanaţi codul QR pentru a vizualiza acest album</string>
-    <string name="secret_album_display_name">Album secret</string>
+    <string name="secret_album_display_name">Album ascuns</string>
     <string name="secret_reason_space_full">Albumul Cloud este plin</string>
     <string name="secret_reason_too_large">Fișierul este prea mare</string>
     <string name="secret_reason_type_not_support">"Acest tip de fișier nu este suportat"</string>
@@ -668,7 +685,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="video_editor_cancel">Renunțați</string>
     <string name="video_editor_done">Terminat</string>
     <string name="video_editor_down_load_later">MAi târziu</string>
-    <string name="video_editor_down_load_no_wifi_tips">Se poate descărca doar prin Wi-Fi</string>
+    <string name="video_editor_down_load_no_wifi_tips">Conectați-vă la Wi-Fi pentru a descărca</string>
     <string name="video_editor_down_load_now">Descărcați</string>
     <string name="video_editor_encode_video">Codificare videoclip…</string>
     <string name="video_editor_encode_video_error">"Nu s-a putut codifica videoclipul"</string>
@@ -686,11 +703,11 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="video_editor_filter_rouge">Roșu</string>
     <string name="video_editor_filter_sunny">Însorit</string>
     <string name="video_editor_invalid_trim_arguments">Trebuie să fie mai lung de o secundă</string>
-    <string name="video_editor_loading_plugin">Încărcare...</string>
+    <string name="video_editor_loading_plugin">Încărcare..</string>
     <string name="video_editor_more">Avansat</string>
     <string name="video_editor_not_support_tips">"Acest tip de videoclipuri nu sunt suportate"</string>
     <string name="video_editor_ok">OK</string>
-    <string name="video_editor_res_not_load_dialog_msg">Pentru a utiliza aceasta, trebuie să descărcați pachetele de resurse</string>
+    <string name="video_editor_res_not_load_dialog_msg">Pentru a utiliza aceasta caracteristică trebuie să descărcați pachetele de resurse</string>
     <string name="video_editor_res_not_load_dialog_title">Necesită descărcarea</string>
     <string name="video_editor_template_family">Familie</string>
     <string name="video_editor_template_forbidden_tips">"Nu se poate face asta când se utilizează un șablon"</string>
