--- a/Romanian/main/YellowPage.apk/res/values-ro/strings.xml
+++ b/Romanian/main/YellowPage.apk/res/values-ro/strings.xml
@@ -259,21 +259,21 @@ Verificați numărul de urmărire."</string>
     <string name="menu_unfollow_yellow_page">Nu mai urmăriți</string>
     <string name="minimum_price">%d RMB/min</string>
     <string name="mishop_web_payment_title">Verificare Magazin Mi</string>
-    <string name="miuishare_account_activate_confirmation">Este necesară activarea</string>
+    <string name="miuishare_account_activate_confirmation">Activați</string>
     <string name="miuishare_account_activate_ok">Activați</string>
     <string name="miuishare_account_login_cancel">Renunțați</string>
     <string name="miuishare_account_login_confirmation">Este necesară autentificarea</string>
     <string name="miuishare_account_login_ok">Autentificați-vă</string>
-    <string name="miuishare_account_need_activate">Partajarea Weibo necesită legarea la contul Xiaomi, care nu este activat în prezent. Activați  contul?</string>
-    <string name="miuishare_account_need_login">Partajarea Weibo necesită legarea la contul Xiaomi, la care nu sunteți conectat în prezent. Vă conectați acum pentru a putea distribui?</string>
+    <string name="miuishare_account_need_activate">Partajarea Weibo necesită legarea la contul Mi, care nu este activat în prezent. Activați  contul mai întâi</string>
+    <string name="miuishare_account_need_login">Partajarea Weibo necesită legarea la contul Mi, la care nu sunteți conectat în prezent. Conectați-vă mai întâi la contul Mi</string>
     <string name="miuishare_app_name">Partajare MIUI</string>
-    <string name="miuishare_no_network">Nicio rețea pentru partajare</string>
+    <string name="miuishare_no_network">"Nu s-a putut conecta la rețea"</string>
     <string name="miuishare_publish">Trimiteți</string>
-    <string name="miuishare_share_done">Conținutul partajat a fost trimis.</string>
+    <string name="miuishare_share_done">Conținutul partajat a fost trimis cu succes.</string>
     <string name="miuishare_share_editor_title">Partajați</string>
     <string name="miuishare_title_more">Mai multe</string>
     <string name="miuishare_title_share">Partajați</string>
-    <string name="miuishare_wechat_timeline_title">Wechat Timeline</string>
+    <string name="miuishare_wechat_timeline_title">Wechat Moments</string>
     <string name="miuishare_weibo_title">Weibo</string>
     <string name="more_coupons">Toate cupoanele</string>
     <string name="more_express_numbers">Mai multe numere express</string>
