--- a/Romanian/main/AntiSpam.apk/res/values-ro/strings.xml
+++ b/Romanian/main/AntiSpam.apk/res/values-ro/strings.xml
@@ -22,7 +22,7 @@
     <string name="Call_DEFAULT">Listă blocări inteligentă</string>
     <string name="Call_PREFIX">Prefix</string>
     <string name="Call_PRIVATE_CALL">Apeluri private</string>
-    <string name="MALICIOUS_URL">Linkuri potențial periculoase</string>
+    <string name="MALICIOUS_URL">Adrese URL potențial periculoase</string>
     <string name="NACaddnumcontent">Introduceți numărul de telefon</string>
     <string name="NACaddnumtitle">Adăugaţi numărul de telefon în lista excepțiilor</string>
     <string name="PAST_BLOCK">Blocat anterior</string>
@@ -54,7 +54,7 @@
     <string name="antispam_notificaiton_type_show_except_blacklist">Numerele din lista excepţiilor</string>
     <string name="antispam_notificaiton_type_show_none">Niciuna</string>
     <string name="antispam_notification_setting_title">Notificări</string>
-    <string name="antispam_xpace_text">Comutați la spațiul principal pentru a putea seta regulile antispam</string>
+    <string name="antispam_xpace_text">Comutați la Spațiul Principal pentru a seta Lista blocărilor</string>
     <string name="app_name">Listă blocări</string>
     <string name="backsound_set_hint">Setați sunetul ca %s?</string>
     <string name="baidu_thanks">Suport oferit de Baidu</string>
