--- a/Romanian/main/DeskClock.apk/res/values-ro/strings.xml
+++ b/Romanian/main/DeskClock.apk/res/values-ro/strings.xml
@@ -108,6 +108,7 @@
     <string name="timer_alarm_alert_pad">%s</string>
     <string name="timer_alarm_cancel_pad">Atingeţi ecranul pentru a opri soneria</string>
     <string name="timer_alert_alert_silenced">Temporizator oprit după %d minute.</string>
+    <string name="timer_clock_alert_text">Setați temporizatorul</string>
     <string name="timer_continue">Continuaţi</string>
     <string name="timer_got_it">OK</string>
     <string name="timer_item_duration_display">%1$d min %2$d sec</string>
