--- a/Romanian/main/FM.apk/res/values-ro/strings.xml
+++ b/Romanian/main/FM.apk/res/values-ro/strings.xml
@@ -59,5 +59,9 @@
     <string name="turn_off_fm">Dezactivaţi radio FM</string>
     <string name="txt_divider">" | "</string>
     <string name="txt_sleep_mode">Modul repaus</string>
+    <string name="using_recorder_cancel">Refuzați</string>
+    <string name="using_recorder_confirm">De acord</string>
+    <string name="using_recorder_dialog_message">"Radio FM trebuie să utilizeze serviciile de înregistrare ale telefonului pentru a funcționa în mod normal."</string>
+    <string name="using_recorder_dialog_title">Permisiune de accesare</string>
     <string name="view_stations_list">Vizualizaţi lista staţiilor</string>
 </resources>
