--- a/Romanian/main/InCallUI.apk/res/values-ro/strings.xml
+++ b/Romanian/main/InCallUI.apk/res/values-ro/strings.xml
@@ -33,7 +33,7 @@
     <string name="callFailed_userBusy">Linie ocupată</string>
     <string name="callUnanswered_forwarded">Apel pierdut redirecţionat</string>
     <string name="call_button_dialer_text">Tastatură</string>
-    <string name="call_button_tools_text">Caracteristică</string>
+    <string name="call_button_tools_text">Caracteristici</string>
     <string name="call_contacts_deny_permission_msg">"Ați refuzat permisiunea de citire contacte; nu se pot afișa detaliile contactelor."</string>
     <string name="call_description_recording">Înregistrare…</string>
     <string name="call_extension_conference_mode">Modul Conferinţă</string>
@@ -78,6 +78,7 @@
     <string name="conference_call_single_description" formatted="false">%s etc. total %s</string>
     <string name="conference_caller_info_name">"Apelul în conferință al %1$s"</string>
     <string name="conference_caller_name_me">Eu</string>
+    <string name="conference_callers_exceeded">Numărul maxim de participanți la conferință a fost atins</string>
     <string name="contactPhoto">Fotografie persoană din agendă</string>
     <string name="contacts_icon_label">Contacte</string>
     <string name="default_area_code_setting">Codul implicit al zonei</string>
@@ -120,12 +121,12 @@
     <string name="incall_error_supp_service_unknown">Serviciu neacceptat.</string>
     <string name="incoming_answer_voice_text">Răspuns vocal</string>
     <string name="incoming_call_forwarded_title">Apel primit redirecţionat</string>
-    <string name="incoming_circle_text_answer">Apel ratat?</string>
-    <string name="incoming_circle_text_answer_p">Slider răspuns?</string>
-  <string name="incoming_circle_text_message">Loosen SMS reply</string>
-  <string name="incoming_circle_text_message_p">SMS reply slide</string>
-  <string name="incoming_circle_text_reject">Loosen reject</string>
-  <string name="incoming_circle_text_reject_p">Rejecting slide</string>
+    <string name="incoming_circle_text_answer">Eliberați</string>
+    <string name="incoming_circle_text_answer_p">Glisați în sus</string>
+    <string name="incoming_circle_text_message">Eliberați</string>
+    <string name="incoming_circle_text_message_p">Glisați în sus</string>
+    <string name="incoming_circle_text_reject">Eliberați</string>
+    <string name="incoming_circle_text_reject_p">Glisați în sus</string>
     <string name="ivr_menu_dialing_msg">Redirecţionare…</string>
     <string name="ivr_menu_dialing_msg_no_mute">Mergeţi la serviciul selectat…[Corecția automată a erorilor este activată]</string>
     <string name="ivr_menu_list_sub_menu_count_format">Apăsaţi %s</string>
